# mcp-finance-assistant

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Decisions.md  PORTFOLIO.md  Plan.md  README.md  architecture.md  config.py  pyproject.toml  server.py
clients/: dart.py  ecos.py
rag/: embedding.py  indexer.py  retriever.py
scripts/: index_pdfs.py
storage/: db.py  models.py  repository.py
tests/: test_dart_client.py  test_dart_repository.py  test_ecos_client.py  test_rag_smoke.py  test_tool_disclosures.py  test_tool_macro.py  test_tool_research.py
tools/: disclosures.py  macro.py  research.py
